--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="card">
             <span class="close">+</span>
             <div>
-              <p>Dear Lin:</p>
+              <p>亲爱的等等:</p>
               <p>Happy Tanabata!</p>
             </div>
           </div>
