--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <span class="close">+</span>
             <div>
               <p>亲爱的等等:</p>
-              <p>Happy Tanabata!</p>
+              <p>七夕节快乐!</p>
             </div>
           </div>
         </div>
