--- a/index.html
+++ b/index.html
@@ -46,32 +46,41 @@
       <div class="heart-fixed heart-lg"></div>
       <div class="overlay"></div>
     </div>
-    <div class="dog">
-      <div class="heart heart--1"></div>
-      <div class="heart heart--2"></div>
-      <div class="heart heart--3"></div>
-      <div class="heart heart--4"></div>
-      <div class="head">
-        <div class="year year--left"></div>
-        <div class="year year--right"></div>
-        <div class="nose"></div>
-        <div class="face">
-          <div class="eye eye--left"></div>
-          <div class="eye eye--right"></div>
-          <div class="mouth"></div>
+    
+    <div class="cat">
+      <div class="face">
+        <div class="ear-left">
+          <div class="inner-l"></div>
+        </div>
+        <div class="ear-right">
+          <div class="inner-r"></div>
+        </div>
+        <div class="eye-left">
+          <div class="eye-ball">
+            <div class="eye-light"></div>
+            <div class="shadow-light"></div>
+          </div>
+        </div>
+        <div class="eye-right">
+          <div class="eye-ball">
+            <div class="eye-light"></div>
+            <div class="shadow-light"></div>
+          </div>
+        </div>
+        <div class="nose">
+          <div class="l1"></div>
+          <div class="l2"></div>
         </div>
       </div>
-      <div class="body">
-        <div class="cheast"></div>
-        <div class="back"></div>
-        <div class="legs">
-          <div class="legs__front legs__front--left"></div>
-          <div class="legs__front legs__front--right"></div>
-          <div class="legs__back legs__back--left"></div>
-          <div class="legs__back legs__back--right"></div>
-        </div>
+      <div class="cat-body">
+        <div class="paw1"></div>
+        <div class="paw2"></div>
         <div class="tail"></div>
       </div>
+    </div>
+    <div class="heart">
+      <div class="heart-l"></div>
+      <div class="heart-r"></div>
     </div>
     <script src="./main.js"></script>
     <script src="./love.js"></script>
