--- a/index.html
+++ b/index.html
@@ -46,36 +46,37 @@
       <div class="heart-fixed heart-lg"></div>
       <div class="overlay"></div>
     </div>
-    
-    <div class="cat">
-      <div class="face">
-        <div class="ear-left">
-          <div class="inner-l"></div>
-        </div>
-        <div class="ear-right">
-          <div class="inner-r"></div>
-        </div>
-        <div class="eye-left">
-          <div class="eye-ball">
-            <div class="eye-light"></div>
-            <div class="shadow-light"></div>
+    <div class="container">
+      <div class="cat">
+        <div class="face">
+          <div class="ear-left">
+            <div class="inner-l"></div>
+          </div>
+          <div class="ear-right">
+            <div class="inner-r"></div>
+          </div>
+          <div class="eye-left">
+            <div class="eye-ball">
+              <div class="eye-light"></div>
+              <div class="shadow-light"></div>
+            </div>
+          </div>
+          <div class="eye-right">
+            <div class="eye-ball">
+              <div class="eye-light"></div>
+              <div class="shadow-light"></div>
+            </div>
+          </div>
+          <div class="nose">
+            <div class="l1"></div>
+            <div class="l2"></div>
           </div>
         </div>
-        <div class="eye-right">
-          <div class="eye-ball">
-            <div class="eye-light"></div>
-            <div class="shadow-light"></div>
-          </div>
+        <div class="cat-body">
+          <div class="paw1"></div>
+          <div class="paw2"></div>
+          <div class="tail"></div>
         </div>
-        <div class="nose">
-          <div class="l1"></div>
-          <div class="l2"></div>
-        </div>
-      </div>
-      <div class="cat-body">
-        <div class="paw1"></div>
-        <div class="paw2"></div>
-        <div class="tail"></div>
       </div>
     </div>
     <script src="./main.js"></script>
